# Jobs

./: Cargo.toml  README.md  dasda.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml  release.yml
doc/: 1.drawio
src/: console.rs  core.rs  lib.rs  main.rs  serialize.rs
src/core/: action.rs  basic.rs  errors.rs  macros.rs  manager.rs  mod.rs  node.rs  serialize.rs  utils.rs
tests/: my_pc.rs  test_console.rs  test_manager.rs  test_manager_action.rs  test_manager_storage.rs  test_mng.rs
